Fix Import logs.

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -111,25 +111,25 @@
    
                                                            <div class="row">
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>{{"Account Name" | localize}}</p>
+                                                                   <p>{{"Account Name" | localize}}*</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>{{"Account Number" | localize}}</p>
+                                                                   <p>{{"Account Number" | localize}}*</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>{{"Account Type" | localize}}</p>
+                                                                   <p>{{"Account Type" | localize}}*</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>{{"Account Sub Type" | localize}}</p>
+                                                                   <p>{{"Account Sub Type" | localize}}*</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                   <p>{{"Assigned User" | localize}}</p>
+                                                                   <p>{{"Assigned User" | localize}}*</p>
                                                                </div>
                                                                <div class="modal-bottom-row-col1">
-                                                                    <p>{{"Reconciliation type" | localize}}</p>
+                                                                    <p>{{"Reconciliation type" | localize}}*</p>
                                                                 </div>
                                                                 <div class="modal-bottom-row-col1">
-                                                                    <p>{{"Reconciliation as" | localize}}</p>
+                                                                    <p>{{"Reconciliation as" | localize}}*</p>
                                                                 </div>
                                                            </div>
                                                        </div>
@@ -139,7 +139,6 @@
                                         <div *ngIf="balance">
                                             <div class="row modal-bottom-record">
                                                 <div class="col-md-12">
-                                                    <!-- <p>{{"Trial Balance Format" | localize}} <a href="../../../../assets/TrailBalance.xlsx" download="TrailBalance.xlsx"style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Download Sample File" | localize}}</u></a></p> -->
                                                     <div class="row py-0">
                                                         <div class="col-xl-5 form-group"><label>{{"Trial Balance Format" | localize}} </label><a href="../../../../assets/TrailBalance.xlsx" download="TrailBalance.xlsx"style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Download Sample File" | localize}}</u></a>
                                                         </div>    
