--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -46,7 +46,6 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <h5 class="modal-title" id="exampleModalLongTitle">
-                                                    <!--Place model title here-->
                                                 </h5>
                                                 <button type="button" class="close" data-dismiss="modal"
                                                     aria-label="Close">
@@ -62,12 +61,11 @@
                                                 <div>
                                                     <div class="row modal-bottom-record">
                                                         <div class="col-md-12">
-                                                            <!-- <p>{{"Trial Balance Format" | localize}} <a href="../../../../assets/TrailBalance.xlsx" download="TrailBalance.xlsx"style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Download Sample File" | localize}}</u></a></p> -->
                                                             <div class="row py-0">
                                                                 <div class="col-xl-5 form-group"><label>{{"Trial Balance
                                                                         Format" | localize}} </label><a
-                                                                        href="../../../../assets/TrailBalance.xlsx"
-                                                                        download="TrailBalance.xlsx"
+                                                                        href="../../../../assets/TrialBalance.xlsx"
+                                                                        download="TrialBalance.xlsx"
                                                                         style="color:blue;margin-left: 20px;cursor: pointer;"><u>{{"Download
                                                                             Sample File" | localize}}</u></a>
                                                                 </div>
