--- a/angular/src/app/admin/roles/create-or-edit-role-modal.component.html
+++ b/angular/src/app/admin/roles/create-or-edit-role-modal.component.html
@@ -1,5 +1,5 @@
-<div bsModal #createOrEditModal="bs-modal" (onShown)="onShown()" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="createOrEditModal"
-     aria-hidden="true" [config]="{backdrop: 'static', keyboard: !saving}">
+<div bsModal #createOrEditModal="bs-modal" (onShown)="onShown()" class="modal fade" tabindex="-1" role="dialog"
+    aria-labelledby="createOrEditModal" aria-hidden="true" [config]="{backdrop: 'static', keyboard: !saving}">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <form *ngIf="active" #roleForm="ngForm" novalidate (ngSubmit)="save()" autocomplete="off">
@@ -8,7 +8,8 @@
                         <span *ngIf="role.id">{{"EditRole" | localize}}: {{role.displayName}}</span>
                         <span *ngIf="!role.id">{{"CreateNewRole" | localize}}</span>
                     </h4>
-                    <button type="button" class="close" (click)="close()" [attr.aria-label]="l('Close')" [disabled]="saving">
+                    <button type="button" class="close" (click)="close()" [attr.aria-label]="l('Close')"
+                        [disabled]="saving">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -17,13 +18,16 @@
                         <tab heading="{{'RoleName' | localize}}">
                             <div class="form-group">
                                 <label>{{"RoleName" | localize}} *</label>
-                                <input id="RoleDisplayName" #roleNameInput="ngModel" class="form-control" type="text" name="DisplayName" autocomplete="off" [(ngModel)]="role.displayName" required maxlength="64">
+                                <input id="RoleDisplayName" #roleNameInput="ngModel" class="form-control" type="text"
+                                    name="DisplayName" autocomplete="off" [(ngModel)]="role.displayName" required
+                                    maxlength="64">
                                 <validation-messages [formCtrl]="roleNameInput"></validation-messages>
                             </div>
 
                             <div class="kt-checkbox-list">
                                 <label class="kt-checkbox">
-                                    <input id="EditRole_IsDefault" type="checkbox" name="IsDefault" [(ngModel)]="role.isDefault">
+                                    <input id="EditRole_IsDefault" type="checkbox" name="IsDefault"
+                                        [(ngModel)]="role.isDefault">
                                     {{"Default" | localize}}
                                     <span></span>
                                 </label>
@@ -39,8 +43,11 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button [disabled]="saving" type="button" class="btn btn-secondary btn-width" (click)="close()">{{"Cancel" | localize}}</button>
-                    <button type="submit" class="btn btn-primary btn-width" [disabled]="!roleForm.form.valid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i> <span>{{"Save" | localize}}</span></button>
+                    <button [disabled]="saving" type="button" class="btn btn-secondary btn-width"
+                        (click)="close()">{{"Cancel" | localize}}</button>
+                    <button type="submit" class="btn btn-primary btn-width" [disabled]="!roleForm.form.valid"
+                        [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i>
+                        <span>{{"Save" | localize}}</span></button>
                 </div>
 
             </form>
