check list business days radio btn css correct

--- a/angular/src/app/admin/settings/tenant-settings.component.html
+++ b/angular/src/app/admin/settings/tenant-settings.component.html
@@ -524,19 +524,19 @@
                                             </div>-->
 
                                             <div style="padding-top: 10px;padding-bottom: 20px;">
-                                                <label class="kt-radio">
+                                                <label class="kt-radio" style="margin: 5px;">
                                                     <input class="form-control" type="radio" name="isWeekEndEnable"
                                                         [checked]="isWeekEndEnable===false" [value]="false"
                                                         (change)="onWeekEndChange(false)" />
-                                                    Seven Business days
+                                                    Seven business days
                                                     <span></span>
                                                 </label>
 
-                                                <label class="kt-radio">
+                                                <label class="kt-radio" style="margin: 5px;">
                                                     <input class="form-control" type="radio" name="isWeekEndEnable"
                                                         [checked]="isWeekEndEnable===true" [value]="true"
                                                         (change)="onWeekEndChange(true)" />
-                                                    Five Business days
+                                                    Five business days
                                                     <span></span>
                                                 </label>
 
