Amortized and itemized Upload.

--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -58,6 +58,105 @@
                             </div>
                         </div>
                     </form>
+                    
+                    <div class="record-card-header-bottom-inner1">
+                        <button *ngIf="'Pages.ChartsofAccounts.Upload' | permission"
+                            class="btn btn-images btn-width pt-2" data-toggle="modal"
+                            data-target="#kt_modal_2">
+                            <img src="../../../../assets/img/upload.png">
+                            {{"Upload" | localize}}
+                        </button>
+                    </div>
+                    <!-- Modal For Upload -->
+                    <div class="modal fade uppy-modal" id="kt_modal_2" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">
+                                </h5>
+                                <button type="button" class="close" data-dismiss="modal"
+                                    aria-label="Close">
+                                </button>
+                            </div>
+                            <div class="modal-body upload-body">
+                                <div class="drag_drop_box uppy-modal-box1">
+                                    <p>{{"Upload Itemized Balance" | localize}}</p>
+                                </div>
+                                <ng-uppy [config]="settings" (uploadResult)="fileUploadedResponseItemizedAccount($event)"></ng-uppy>
+                                <div>
+                                    <div class="row modal-bottom-record">
+                                        <div class="col-md-12">
+                                            <div class="row py-0">
+                                                <div class="col-xl-5 form-group">
+                                                    <label>{{"Itemized Account Format" | localize}} </label>
+                                                    <a
+                                                        href="../../../../assets/itemized.xlsx"
+                                                        download="itemized.xlsx"
+                                                        style="color:blue;margin-left: 20px;cursor: pointer;">
+                                                        <u>{{"Download Sample File" | localize}}</u>
+                                                    </a>
+                                                </div>
+                                                <div class="form-group col-xl-3 pt-2">
+                                                    <label>{{"Select Month for Itemized Account" |
+                                                        localize}} </label>
+                                                </div>
+                                                <div class="form-group col-xl-3"
+                                                    style="height: 40px !important;">
+                                                    <div class="month-calender">
+                                                        <form class="input-arrow">
+                                                            <input [(ngModel)]="selectedDate"
+                                                                (ngModelChange)="checkMonthActiveorNot($event)"
+                                                                required="required" autocomplete="off"
+                                                                class="form-control" name="date"
+                                                                bsDatepicker placeholder="Select Month"
+                                                                class="form-control" name="date"
+                                                                bsDatepicker
+                                                                [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
+                                                                (onShown)="onOpenCalendar($event)">
+                                                        </form>
+                                                        <span class="form-control-feedback"
+                                                            *ngIf="!checkActiveMonth">{{"ThisMonthIsNotActive"
+                                                            | localize}}</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="inner-col-record border border-default">
+
+                                                <div class="row">
+                                                    <div class="modal-bottom-row-col">
+                                                        <p>{{"InvoiceNo" | localize}}</p>
+                                                    </div>
+                                                    <div class="modal-bottom-row-col">
+                                                        <p>{{"JournalEntryNo" | localize}}</p>
+                                                    </div>
+                                                    <div class="modal-bottom-row-col">
+                                                        <p>{{"Date" | localize}}</p>
+                                                    </div>
+                                                    <div class="modal-bottom-row-col">
+                                                        <p>{{"Amount" | localize}}</p>
+                                                    </div>
+                                                    <div class="modal-bottom-row-col">
+                                                        <p>{{"Description" | localize}}</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary btn-width"
+                                    data-dismiss="modal">{{"Close" | localize}}</button>
+                                <button type="button" class="btn btn-primary btn-width"
+                                    data-dismiss="modal" (click)="SaveChanges()"
+                                    [disabled]="activeSaveButton">{{"Save changes" | localize}}</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                     <div class="primeng-paging-container" style="margin:0px -17px" >
                         <div class="table-box">
