--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -151,7 +151,8 @@
                                                                 </div>
                                                                 <div *ngIf="!item.picture"
                                                                     class="kt-badge kt-badge--xl kt-badge--primary mem-img">
-                                                                    {{item.name | firstLetterOfWords}}</div>
+                                                                    {{item.name | firstLetterOfWords}}
+                                                                </div>
                                                             </div>
                                                             <div class="kt-user-card-v2__details">
                                                                 <span class="kt-user-card-v2__name">
@@ -173,7 +174,8 @@
                                                     </div>
                                                     <div *ngIf="!item.picture"
                                                         class="kt-badge kt-badge--xl kt-badge--primary">
-                                                        {{item.name | firstLetterOfWords}}</div>
+                                                        {{item.name | firstLetterOfWords}}
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
