--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -55,7 +55,7 @@
                         <form class="kt-form calender-filter">
                             <div>
                                 <div class="row align-items-center mb-4">
-                                    <div class="col-md-3 kt-margin-b-20-tablet-and-mobile">
+                                    <div class="col-md-6 kt-margin-b-20-tablet-and-mobile">
                                         <div class="date-picker">
                                             <input id="monthValue" 
                                                 value="january 2020" style="width:170px" (ngModelChange)="filterByMonth($event)" class="date-field form-control m-input"  name="monthValue"
@@ -63,17 +63,20 @@
                                                 (onShown)="onOpenCalendar($event)" type="text" bsDatepicker />
                                         </div>
                                     </div>
+                                    <div class="col-md-3">
+                                        <button *ngIf="'Pages.ChartsofAccounts.Upload' | permission"
+                                            class="btn btn-images btn-width pt-2" data-toggle="modal"
+                                            data-target="#kt_modal_2">
+                                            <img src="../../../../assets/img/upload.png">
+                                            {{"Upload" | localize}}
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </form>
                     </div>
                     
-                        <button *ngIf="'Pages.ChartsofAccounts.Upload' | permission"
-                            class="btn btn-images btn-width pt-2" data-toggle="modal"
-                            data-target="#kt_modal_2">
-                            <img src="../../../../assets/img/upload.png">
-                            {{"Upload" | localize}}
-                        </button>
+                       
                         <!-- Modal for upload -->
                         <div class="modal fade uppy-modal" id="kt_modal_2" tabindex="-1" role="dialog"
                     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
