--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.css
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.css
@@ -1188,6 +1188,7 @@ ul, ul li {
         height: 200px !important;
         min-width: 100% !important;
         width: 100% !important;
+        margin-left: 14px;
     } 
     .uppy-modal .modal-dialog {
         max-width: 1000px;
@@ -1245,7 +1246,7 @@ ul, ul li {
         width:100%;
     }
     .uppy-modal .modal-dialog .uppy-modal-box1 > p {
-        width: 50%;
+        width: 100%;
         display: inline-block;
         text-align: center;
         color: #0F2757;
@@ -1254,7 +1255,8 @@ ul, ul li {
     }
     .modal-bottom-row-col {
         width: 33.33%;
-        padding: 5px;
+        height: 40px;
+        padding-top:9px ;
     }
     .row.modal-bottom-record {
         margin-top:30px;
@@ -1276,9 +1278,9 @@ ul, ul li {
         border-radius: 5px;
         padding: 10px;
     }
-    .modal-bottom-row-col p {
+    /* .modal-bottom-row-col p {
         font-size: 8px;
-    }
+    } */
     .uppy-modal .modal-footer,
     .download-modal .modal-footer  {
         justify-content: center;
@@ -1287,6 +1289,7 @@ ul, ul li {
     .uppy-modal .modal-header,
     .download-modal .modal-header {
         border: 0;
+        padding: 5px !important;
     }
     .download-modal .modal-dialog {
         max-width: 1000px;
