--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.css
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.css
@@ -1163,12 +1163,11 @@
     .table-row-collapsible td ul{
         width: 500px;
     }
-    .uppy-modal ::ng-deep .uppy-Dashboard-inner {        
+    .uppy-modal ::ng-deep .uppy-Dashboard-inner {
         min-height:100px !important;
-        height: 200px !important;
-        min-width: 100% !important;
-        width: 100% !important;
-        margin-left: 14px;
+        height: 100px !important;
+        min-width: 50% !important;
+        width: 50% !important;
     } 
     .uppy-modal .modal-dialog {
         max-width: 1000px;
@@ -1181,14 +1180,13 @@
         flex-wrap: wrap;
         position: relative;
     }
-    .uppy-modal .modal-dialog ::ng-deep .drag-drop-area .uppy-Root {        
-        width: 100% !important;
-        margin-left: 0% 5% !important;
+    .uppy-modal .modal-dialog ::ng-deep .drag-drop-area .uppy-Root {
+        width: 50% !important;
     }
     .uppy-modal .modal-dialog ::ng-deep .drag-drop-area ::ng-deep .uppy-Root:nth-child(1),
     .download-modal-row .col-md-6:nth-child(1){
         padding-right: 30px !important;
-        /* border-right: 1px solid #E2E3E5 !important; */
+        border-right: 1px solid #E2E3E5 !important;
     }
     .uppy-modal .modal-dialog ::ng-deep .drag-drop-area ::ng-deep .uppy-Root:nth-child(2),
     .download-modal-row .col-md-6:nth-child(2){
@@ -1226,17 +1224,16 @@
         width:100%;
     }
     .uppy-modal .modal-dialog .uppy-modal-box1 > p {
-        width: 100%;
+        width: 50%;
         display: inline-block;
         text-align: center;
         color: #0F2757;
         font-size: 18px;
         font-weight: 500;
     }
-    .modal-bottom-row-col {        
+    .modal-bottom-row-col {
         width: 33.33%;
-        height: 40px;
-        padding-top:9px ;
+        padding: 5px;
     }
     .row.modal-bottom-record {
         margin-top:30px;
@@ -1258,9 +1255,9 @@
         border-radius: 5px;
         padding: 10px;
     }
-    /* .modal-bottom-row-col p {
+    .modal-bottom-row-col p {
         font-size: 8px;
-    } */
+    }
     .uppy-modal .modal-footer,
     .download-modal .modal-footer  {
         justify-content: center;
@@ -1269,7 +1266,6 @@
     .uppy-modal .modal-header,
     .download-modal .modal-header {
         border: 0;
-        padding: 5px !important;
     }
     .download-modal .modal-dialog {
         max-width: 1000px;
